# Aexeo

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.md  SECURITY.md  SPEC.md  deny.toml  mypy.ini  package-lock.json  package.json  performance-budget.json  pyproject.toml  seogeo.toml
.chau7/sessions/rs_69d0615e/: plan.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish-internal-package.yml  release-internal.yml
crates/aexeo-cli/: Cargo.toml
crates/aexeo-cli/src/: cli.rs  main.rs
crates/aexeo-cli/src/commands/: config.rs  docs.rs  facts.rs  integrations.rs  intelligence.rs  listings.rs  mod.rs  runtime.rs  static_site.rs  utility.rs
crates/aexeo-cli/src/output/: audit.rs  config.rs  misc.rs  mod.rs
crates/aexeo-cli/tests/: config_docs_quality_integration.rs  install_script.rs  integrations_integration.rs  intelligence_integration.rs  listings_integration.rs  runtime_commands_integration.rs  runtime_support.rs  static_commands_integration.rs  support.rs
crates/aexeo-cli/tests/fixtures/chau7-mini-site/: aexeo-truth.json  index.html
crates/aexeo-cli/tests/fixtures/chau7-mini-site/compare/: vs-iterm2.html
crates/aexeo-cli/tests/fixtures/chau7-mini-site/features/: hyperlinks.html
crates/aexeo-contracts/: Cargo.toml
crates/aexeo-contracts/src/: lib.rs
crates/aexeo-core/: Cargo.toml
crates/aexeo-core/examples/: bench_runtime_audit.rs  bench_static_audit.rs
crates/aexeo-core/src/: accessibility_rules.rs  adapter.rs  agent_discovery_rules.rs  capabilities.rs  config.rs  content_rules.rs  docs.rs  fix.rs  generate.rs  header_rules.rs  html_rules.rs  integrations.rs  lib.rs  link_rules.rs  llm_rules.rs  plugin.rs  policy.rs  quality.rs  registry.rs  reporting.rs  robots_rules.rs  runtime.rs  schema_rules.rs  site.rs  sitemap_rules.rs  social_rules.rs  static_check.rs  structure_rules.rs  surface_rules.rs  surfaces.rs  time_shim.rs  verification.rs  well_known_rules.rs
crates/aexeo-core/src/config/: defaults.rs  docs.rs  load.rs  views.rs
crates/aexeo-core/src/intelligence/: evidence.rs  facts_prompt.rs  fanout.rs  grounding.rs  identity.rs  mod.rs  schema_gen.rs  score.rs  trust.rs  truth.rs
crates/aexeo-core/src/intelligence/presence/: mod.rs  sources.rs  types.rs  util.rs
crates/aexeo-core/src/quality/: docs.rs  rust.rs  tooling.rs
crates/aexeo-core/src/runtime/: artifact_probe.rs  fetcher.rs  http.rs  planner.rs  playwright.rs  snapshot.rs
crates/aexeo-core/src/schema_rules/: json_ld.rs
crates/aexeo-core/src/site/: parser.rs
crates/aexeo-emdash-bridge/: Cargo.toml  STATUS.md
crates/aexeo-emdash-bridge/src/: document.rs  evaluate.rs  lib.rs  page.rs  portable_text.rs  render.rs  site.rs  wasm.rs
crates/seogeo-cli/: Cargo.toml
crates/seogeo-cli/src/: cli.rs  main.rs  output.rs
crates/seogeo-cli/src/commands/: common.rs  config.rs  docs.rs  facts.rs  integrations.rs  intelligence.rs  listings.rs  mod.rs  runtime.rs  static_site.rs  utility.rs
crates/seogeo-cli/src/output/: audit.rs  config.rs  misc.rs  mod.rs
crates/seogeo-cli/tests/: cli_integration.rs  config_docs_quality_integration.rs  install_script.rs  integrations_integration.rs  intelligence_integration.rs  listings_integration.rs  runtime_commands_integration.rs  runtime_support.rs  static_commands_integration.rs  support.rs
crates/seogeo-cli/tests/fixtures/: chau7-trust-surfaces.json
crates/seogeo-contracts/: Cargo.toml
crates/seogeo-contracts/src/: lib.rs
crates/seogeo-core/: Cargo.toml
crates/seogeo-core/examples/: bench_runtime_audit.rs  bench_static_audit.rs
crates/seogeo-core/src/: adapter.rs  config.rs  content_rules.rs  docs.rs  fix.rs  generate.rs  html_rules.rs  integrations.rs  lib.rs  link_rules.rs  llm_rules.rs  plugin.rs  policy.rs  quality.rs  registry.rs  reporting.rs  robots_rules.rs  runtime.rs  schema_rules.rs  site.rs  sitemap_rules.rs  social_rules.rs  static_check.rs  structure_rules.rs  surface_rules.rs  timing.rs  verification.rs
crates/seogeo-core/src/config/: defaults.rs  docs.rs  load.rs  render.rs  views.rs
crates/seogeo-core/src/intelligence/: evidence.rs  facts_prompt.rs  fanout.rs  grounding.rs  mod.rs  score.rs  trust.rs  truth.rs
crates/seogeo-core/src/quality/: docs.rs  rust.rs  tooling.rs
crates/seogeo-core/src/runtime/: fetcher.rs  graph.rs  http.rs  planner.rs  playwright.rs  snapshot.rs
crates/seogeo-core/src/schema_rules/: intent.rs  json_ld.rs
crates/seogeo-core/src/site/: parser.rs  sitemap.rs
crates/tempfile/: Cargo.toml
crates/tempfile/src/: lib.rs
docs/: ENGINEERING.md  adapters.md  architecture.md  astro-ci.md  cli.md  config.md  config.schema.json  decisions.md  facts-manifest.md  install.md  integrations.md  local-quality.md  package-boundaries.md  release.md  rules.md  static-site-ci.md
docs/examples/: aexeo.v1.toml  astro-aexeo-ci.yml  astro-seogeo-ci.yml  seogeo.v1.toml
docs/schemas/: aexeo-truth.schema.json  facts.schema.json
reports/: usefenn-client-report-2026-04-24.md
scripts/: bench.sh  bootstrap-aexeo.template.sh  bootstrap-seogeo.template.sh  build-rust.sh  build_internal_release.sh  check-code.sh  check-config.sh  check-deps.sh  check-docs.sh  check-performance.sh  check-repo.sh  ci-local.sh  clippy-strict.sh  guard-staged.sh  install-aexeo.sh  install-hooks.sh  install-quality-tools.sh  install-seogeo.sh  pre-commit.sh  pre-push.sh  timing-lib.sh  write-timings-report.sh
src/seogeo/: __init__.py  adapters.py  assets.py  cache.py  cli.py  config.py  crawl.py  docsync.py  engine.py  extensions.py  fix.py  generate.py  models.py  quality.py  registry.py  reporting.py  runner.py  runtime.py  sdk.py  site.py  verification.py
src/seogeo/rules/: llm.py  (+9 more)
tests/: helpers.py  test_architecture_layers.py  test_assets_cache.py  test_config.py  test_docsync.py  test_extensions.py  test_html_content.py  test_links.py  test_quality.py  test_registry_cli.py  test_robots_social.py  test_runtime_tools.py  test_site.py  test_sitemap_llm.py  test_smoke.py  test_structure_schema.py  test_verification.py
