[workspace]
members = [
  "crates/seogeo-contracts",
  "crates/seogeo-core",
  "crates/seogeo-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Christophe Henner"]
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
