[workspace]
members = [
  "crates/tempfile",
  "crates/seogeo-contracts",
  "crates/seogeo-core",
  "crates/seogeo-cli",
  "crates/aexeo-emdash-bridge",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2024"
authors = ["Christophe Henner"]
license = "MIT"
publish = false
repository = "https://github.com/schiste/Aexeo"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "charset", "http2"] }
url = "2.5"
