[package]
name = "aexeo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["net"]
net = ["dep:reqwest"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
csv.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true
aexeo-contracts = { version = "0.0.5", path = "../aexeo-contracts" }

[dev-dependencies]
tempfile = { version = "0.0.5", path = "../tempfile" }
