[package]
name = "aexeo-emdash-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
seogeo-contracts = { version = "0.2.0", path = "../seogeo-contracts" }
seogeo-core = { version = "0.2.0", path = "../seogeo-core", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
