[package]
name = "seogeo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
seogeo-core = { path = "../seogeo-core" }
seogeo-contracts = { path = "../seogeo-contracts" }

[dev-dependencies]
tempfile = "3.15"
