[package]
name = "seogeo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
seogeo-core = { version = "0.2.0", path = "../seogeo-core" }
seogeo-contracts = { version = "0.2.0", path = "../seogeo-contracts" }

[dev-dependencies]
tempfile = { version = "0.2.0", path = "../tempfile" }
