[package]
name = "seogeo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
seogeo-contracts = { version = "0.2.0", path = "../seogeo-contracts" }

[dev-dependencies]
tempfile = "3.15"
