[package]
name = "seogeo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
csv.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true
seogeo-contracts = { version = "0.2.0", path = "../seogeo-contracts" }

[features]
default = ["net"]
net = ["dep:reqwest"]

[dev-dependencies]
tempfile = { version = "0.2.0", path = "../tempfile" }
